# kusto-query-language-python-parser

./: .gitignore  LICENSE  README.md  example.py  input.txt  main.py  parser.py  pyproject.toml  requirements.txt  test.json
examples/: example.py  input.txt
grammar/: Kql.g4
parse_tools/: Kql.interp  KqlListener.py
parse_tools_v4.13/: Kql.interp  KqlLexer.interp  KqlParser.py
parser/: kql_traverse.py  listener.py
parsetools/: ExprLexer.py  ExprListener.py  ExprParser.py
src/kusto_query_language_parser/grammar/: KqlTokens.g4
src/kusto_query_language_parser/parse_tools/: Kql.tokens  KqlLexer.interp  KqlLexer.py  KqlListener.py  KqlParser.py
src/kusto_query_language_parser/parse_tools_v4.13/: KqlLexer.py  KqlVisitor.py
src/kusto_query_language_parser/parser/: kql_traverse.py  listener.py
